# neurocircuitdesk-public

./: .gitignore  LICENSE  README.md
docs/: flyeyesimulator.md  microcircuit_construction.md  unified_algorithm_syntax.md
docs/demos/: demo_active_sampling.py  demo_circuit_viz.py  demo_fes.ipynb  demo_flyeye.py  demo_looming.ipynb  demo_looming_circuit.py  demo_looming_lib.ipynb  demo_motion_circuit.py
docs/demos/data/: highway.h5
flyeyesimulator/: IO_viz.py  __init__.py  _mlx_shim.py  backend.py  flyeyesimulator_active.py  flyeyesimulator_static.py  phototransduction.py  pyproject.toml  retina.py  retina_rotator.py  retinaviz.py  screen.py  screenviz.py  simulatorviz.py  superposition.py
neurocircuitdesk/: __init__.py  blocks_exe.py  blocks_viz.py  canvas.py  diagram2d.py  io_utils.py  math.py  microcircuit.py  microcircuit_viz.py  mlx_engine.py  pyproject.toml  registry.py  spec.py  state_utils.py  stimuli.py  video_input.py
neurocircuitdesk/libs/: __init__.py  algorithms.py  microcircuit_templates.py
neurocircuitdesk/libs/jsons/: hex_grid_graph.json  hexcol_l1m3_new_578.json  l1tm3_dict.json
tests/: test_spec_roundtrip.py
